T2: Updated to new mock style

--- a/gmock.conf
+++ b/gmock.conf
@@ -22,15 +22,13 @@ file_template_hpp = """\
 #include "%(dir)s/%(file)s"
 
 namespace mocks {
-    %(namespaces_begin)s
 
-        %(template)sclass Mock%(interface)s final : public %(template_interface)s
-        {
-        public:
-        %(mock_methods)s
-        };
+    %(template)sclass Mock%(interface)s final : public %(namespaces)s%(template_interface)s
+    {
+    public:
+    %(mock_methods)s
+    };
 
-    %(namespaces_end)s
 } // namespace mocks
 
 """
